Refined svn:ignore properties
POM modified in order to compile bundle as default

Fixed problem in UPnPEventNotifier which was sending event containg pair <String name,String value> instead of <UPnPStateVariable, Object value> see OSGi Compendium R4 pag. 257
ExporterUPnPEventListener was aspecting pair <String name, Object value> instead of <UPnPStateVariable, Object value> so I have changed it to be complaint to OSGi specification but also legacy compatible
Fixed Service leak in UPnP Base Driver see class MyCtrlPoint
Fixed compilation issue with Java 6 in
TimeStateVariable was returing wrong value with metho getCurrentValue() and was not compatible with Java6
SetTimeAction was not updating the time and it was not notifing the change of the UPnP statevariable
ClockDevice was badly notifing UPnP state variable changeing with pair <String name,String value> instead of <UPnPStateVariable, Object value>  
StatusStateVariable was not compatible with Java6

git-svn-id: https://svn.apache.org/repos/asf/felix/trunk@608549 13f79535-47bb-0310-9956-ffa450edef68